# tax_review

./: .gitignore  CLAUDE.md  README.md  analysis.html  download_data.bat  extract_params.bat  pyproject.toml  run_pipeline.bat  run_tests.bat  run_validation.bat  setup_env.bat  verify_data.bat
.claude/: settings.local.json
data/: manifest.json
data/derived/: calibration_approach1_2018.json  calibration_approach1_2019.json  calibration_approach1_2020.json  calibration_approach1_2021.json  calibration_approach1_2022.json  calibration_approach2_2018.json  calibration_approach2_2019.json  calibration_approach2_2020.json  calibration_approach2_2021.json  calibration_approach2_2022.json  calibration_approach3_2018.json  calibration_approach3_2019.json  calibration_approach3_2020.json  calibration_approach3_2021.json  calibration_approach3_2022.json  calibration_combined_2018.json  calibration_combined_2019.json  calibration_combined_2020.json  calibration_combined_2021.json  calibration_combined_2022.json  calibration_summary.json
data/parameters/: 2018_tax_parameters.json  2019_tax_parameters.json  2020_tax_parameters.json  (+4 more)
docs/: index.html  plan.md  style.css  v3_plan.md
scripts/: reconstruct_netting.py
tests/: conftest.py  test_agi_bins.py  test_cpi_adjust.py  test_db.py  test_download.py  test_export_data.py  test_extract_tax_params.py  test_generate_2023.py  test_parse_table_14.py  test_parse_table_14a.py  test_parse_table_1x.py  test_parse_table_3x.py  test_pipeline.py  test_read_aloud.py  test_reconcile.py  test_reform.py  test_report.py  test_soca.py
(+41 files in other folders)
